k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: eks-cicd-demo
spec:
  selector:
    app: eks-cicd-demo

  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000

  type: ClusterIP
